--- a/about.html
+++ b/about.html
@@ -23,9 +23,9 @@
     <header id="header">
         <h1>Jatayu Copy House</h1>
         <nav>
-            <a href="#home">Home</a>
+            <a href="index.html#home">Home</a>
             <a href="#about">About Us</a>
-            <a href="#services">Services</a>
+           
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -37,11 +37,16 @@
             <p>Thank you for choosing us. We look forward to serving you!</p>
         </section>
     </main>
+    <section id="contact">
     <footer id="footer">
         <img src="images/jatayupng.png" width="100px" alt="Jatayu Logo">
         <p>Contact us at: <a href="mailto:msmemitratushar@gmail.com" style="color: white;">msmemitratushar@gmail.com</a></p>
         <p>Phone: 981-740-9607</p>
         <p>Address: Rohtak, Gohana Rd</p>
+        <br><br>
+        <p>Copyright &copy; 2022 Jatayu Copy House</p>
+        <br>
     </footer>
+</section>
 </body>
 </html>
