--- a/index.html
+++ b/index.html
@@ -152,44 +152,15 @@
   </div>
 </div>
 
-  <style>
-
-
-    .Floatingcontainer {
-      position: relative;
-      width: 100%;
-      height:  100px; /* Adjust container height as needed */
-    }
-
-    /* Floating Animation */
-    .floatingAnimation {
-      margin-left: 40%;;
-      position: absolute;
-      bottom: 0; /* Adjust the position of the floating element relative to the container */
-      left: 30%; /* Position floating element horizontally in the center of the container */
-      transform: translateX(-50%);
-      animation: floatAnimation 3s ease-in-out infinite alternate; /* Adjust animation properties */
-    }
-
-    @keyframes floatAnimation {
-      0% {
-        transform: translateY(0);
-      }
-      100% {
-        transform: translateY(-20px); /* Adjust floating distance */
-      }
-    }
-  </style>
-
-<div class="Floatingcontainer">
  
-  <div class="floatingAnimation">
-    <!-- Floating animation element -->
-    <img src="/images/jatayupng.png" width="60%" alt="Floating Animation">
-  </div>
+
+
   <header id="header">
+    
+    <h1>  Jatayu Copy House में आपका स्वागत है!
+      </h1>
+      <img src="images/jatayupng.png" width="100px" alt="Jatayu Logo" >
     <br><br>
-    <h1>Jatayu Copy House में आपका स्वागत है!</h1>
     <nav>
         <a href="#home">Home</a>
         <a href="about.html">About Us</a>
