--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     
     <h1>  Jatayu Copy House में आपका स्वागत है!
       </h1>
-      <img src="images/jatayupng.png" width="100px" alt="Jatayu Logo" >
+      <img src="images/jatayupng.png" width="100px" alt="Jatayu Logo">
     <br><br>
     <nav>
         <a href="#home">Home</a>
@@ -218,30 +218,35 @@
                 <p>Price: ₹100</p>
                 <img src="images/1.png" width="60%" alt="Notebook">
                 <button onclick="addToCart('Notebook', 100, 'NB100')">Add to Cart</button>
+                <br><br><button><a href="#cart">Manage your Cart</a></button>
             </li>
             <li>
                 <h3>Pen</h3>
                 <p>Price: ₹20</p>
                 <img src="images/2.png" width="60%" alt="Pen">
                 <button onclick="addToCart('Pen', 20, 'PEN20')">Add to Cart</button>
+                <br><br><button><a href="#cart">Manage your Cart</a></button>
             </li>
             <li>
                 <h3>Pencil</h3>
                 <p>Price: ₹10</p>
                 <img src="images/3.png" width="60%" alt="Pencil">
                 <button onclick="addToCart('Pencil', 10, 'PEN10')">Add to Cart</button>
+                <br><br><button><a href="#cart">Manage your Cart</a></button>
             </li>
             <li>
                 <h3>Eraser</h3>
                 <p>Price: ₹5</p>
                 <img src="images/4.png" width="60%" alt="Eraser">
                 <button onclick="addToCart('Eraser', 5, 'ER05')">Add to Cart</button>
+                <br><br><button><a href="#cart">Manage your Cart</a></button>
             </li>
             <li>
                 <h3>Sharpener</h3>
                 <p>Price: ₹15</p>
                 <img src="images/5.png" width="60%" alt="Sharpener">
                 <button onclick="addToCart('Sharpener', 15, 'SH15')">Add to Cart</button>
+                <br><br><button><a href="#cart">Manage your Cart</a></button>
             </li>
         </ul>
         <h2>Cart</h2>
