--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="images/jatayupng.png">
+    <link rel="icon" type="image/logo.png" href="images/logo.png">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <title>Jatayu Copy House - About Us</title>
+    <title>Shabari Delights Restaurant - About Us</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -21,7 +21,7 @@
 </head>
 <body>
     <header id="header">
-        <h1>Jatayu Copy House</h1>
+        <h1>Shabari Delights Restaurant</h1>
         <nav>
             <a href="index.html#home">Home</a>
             <a href="#about">About Us</a>
@@ -32,19 +32,19 @@
     <main>
         <section id="about">
             <h2>About Us</h2>
-            <p>Welcome to Jatayu Copy House! We are dedicated to providing high-quality stationery products to our customers. Our mission is to offer a wide range of stationery items at affordable prices with excellent customer service.</p>
-            <p>At Jatayu Copy House, we believe in customer satisfaction and strive to exceed expectations. Whether you're looking for notebooks, pens, pencils, or other stationery essentials, we've got you covered!</p>
+            <p>Welcome to Shabari Delights Restaurant! We are dedicated to providing delicious and authentic Indian cuisine to our customers. Our mission is to offer a delightful dining experience with a wide range of dishes made from fresh ingredients and traditional recipes.</p>
+            <p>At Shabari Delights Restaurant, we value quality, taste, and customer satisfaction. Whether you're craving North Indian, South Indian, or Indo-Chinese specialties, our menu has something for everyone.</p>
             <p>Thank you for choosing us. We look forward to serving you!</p>
         </section>
     </main>
     <section id="contact">
     <footer id="footer">
-        <img src="images/jatayupng.png" width="100px" alt="Jatayu Logo">
+        <img src="images/logo.png" width="100px" alt="Shabari Delights Logo">
         <p>Contact us at: <a href="mailto:msmemitratushar@gmail.com" style="color: white;">msmemitratushar@gmail.com</a></p>
         <p>Phone: 981-740-9607</p>
         <p>Address: Rohtak, Gohana Rd</p>
         <br><br>
-        <p>Copyright &copy; 2022 Jatayu Copy House</p>
+        <p>Copyright &copy; 2022 Shabari Delights Restaurant</p>
         <br>
     </footer>
 </section>
