--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <h2>DIGITAL MENU CARD </h2>
   <p><b>with UPI payment</b></p>
   <table id="productTable">
-    <!-- <div class="thead">
+    <div class="thead">
     <thead>
       <tr>
           <th>Icon</th>
@@ -49,7 +49,7 @@
           <th>Cart Status</th>
       </tr>
   </thead>
-</div> -->
+</div>
 <br><br>
       <tbody>
           <!-- Product 1 -->
