--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
   <p><b>with UPI payment</b></p>
   <table id="productTable">
     <div class="thead">
-    <thead>
+    <!-- <thead>
       <tr>
           <th>Icon</th>
           <th>Item Details</th>
           <th>Quantity & Add to Cart</th>
           <th>Cart Status</th>
-      </tr>
+      </tr> -->
   </thead>
 </div>
 <br><br>
