--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                   <input type="number" value="1" min="1">
               </td>
               
-              <td class="cart-status" id="status-CT120"><img src="images/waiter.png" style="width: 5%;"> </td>
+              <td class="cart-status" id="status-CT120"><img src="images/waiter.png"  class="waiter"> </td>
               <td>
                   <button onclick="addToCart('Complete Thali', 120, 'CT120')">Add to Cart</button>
                   
@@ -85,7 +85,7 @@
               <td class="quantity">
                   <input type="number" value="1" min="1">
               </td>
-              <td class="cart-status" id="status-CDFP90"><img src="images/waiter.png" style="width: 5%;"></td>
+              <td class="cart-status" id="status-CDFP90"><img src="images/waiter.png" class="waiter"></td>
               <td>
                   <button onclick="addToCart('Chana Daal Full Plate', 90, 'CDFP90')">Add to Cart</button>
               </td>
@@ -104,7 +104,7 @@
               <td class="quantity">
                   <input type="number" value="1" min="1">
               </td>
-              <td class="cart-status" id="status-CDHP60"><img src="images/waiter.png" style="width: 5%;"></td>
+              <td class="cart-status" id="status-CDHP60"><img src="images/waiter.png" class="waiter"></td>
               <td>
                   <button onclick="addToCart('Chana Daal Half Plate', 60, 'CDHP60')">Add to Cart</button>
               </td>
@@ -123,7 +123,7 @@
               <td class="quantity">
                   <input type="number" value="1" min="1">
               </td>
-              <td class="cart-status" id="status-SR10"><img src="images/waiter.png" style="width: 5%;"></td>
+              <td class="cart-status" id="status-SR10"><img src="images/waiter.png" class="waiter"></td>
               <td>
                   <button onclick="addToCart('Simple Roti', 10, 'SR10')">Add to Cart</button>
               </td>
@@ -142,7 +142,7 @@
               <td class="quantity">
                   <input type="number" value="1" min="1">
               </td>
-              <td class="cart-status" id="status-NR20"><img src="images/waiter.png" style="width: 5%;"></td>
+              <td class="cart-status" id="status-NR20"><img src="images/waiter.png" class="waiter"></td>
               <td>
                   <button onclick="addToCart('Naan Roti', 20, 'NR20')">Add to Cart</button>
               </td>
