--- a/index.html
+++ b/index.html
@@ -148,7 +148,23 @@
               </td>
              
           </tr>
-          
+          <!-- Product 6 -->
+<tr class="product-item" data-name="Ghewar" data-price="550" data-id="GHW550">
+    <td>
+        <img src="images/ghewar.png" alt="Ghewar Icon" width="150" class="zoom" onclick="openModal('images/ghewar.png')">
+    </td>
+    <td><b>गुड़ का घेवर Ghewar</b></td>
+    <td>Delicious Ghewar made with fresh milk and garnished with dry fruits</td>
+    <td>₹550</td>
+    <td class="quantity">
+        <input type="number" value="1" min="1">
+    </td>
+    <td class="cart-status" id="status-GHW550"><img src="images/waiter.png" class="waiter"> </td>
+    <td>
+        <button onclick="addToCart('Ghewar', 550, 'GHW550')">Add to Cart</button>
+    </td>
+</tr>
+
           <!-- Add more items here -->
       </tbody>
   </table>
