--- a/index.html
+++ b/index.html
@@ -2630,13 +2630,13 @@
       </div>
       <div class="form-group hidden" id="responseGroup">
           <label for="address" id="responseLabel">Enter your room number<span class="mandatory">*</span>:</label>
-          <input type="text" id="address" name="response" required>
+          <input type="number" id="address" name="response" required>
       </div>
        
         <label for="contact">Contact<span class="mandatory">*</span>:</label>
-        <input type="text" id="contact" required>
+        <input type="number" id="contact" required>
         <label for="alternateContact">Alternate Contact:</label>
-        <input type="text" id="alternateContact">
+        <input type="number" id="alternateContact">
         <button type="button" onclick="generateInvoice()">Generate Invoice</button>
     </form>
   </div>
