--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="checkout">
         <a href="#checkoutForm"> <!-- Replace the href with your WhatsApp link -->
             <!-- You can use a WhatsApp icon image or any text/icon of your choice -->
-        <img src="images/checkouti.png" width="50" height="auto" style="border-radius: 40%;">
+        <img src="images/checkoutpng.png" width="50" height="auto" style="border-radius: 40%;">
       </a>
     </div>
     <header>
@@ -236,7 +236,7 @@
                         <td>₹55</td>
                         <td class="quantity"><input type="number" value="1" min="1"></td>
                         <td class="cart-status" id="status-S55"><img src="images/waiter.png" class="waiter"></td>
-                        <td><button onclick="addToCart('Soda', 55, 'S55')">Add to Cart</button></td>
+                        <td><button onclick="addToCart('Soda', 55, 'S55')">Add to Cart </button></td>
                     </tr>
                     <tr class="product-item" data-name="Packed Drinking Water" data-price="85" data-id="PDW85">
                         <td><b>Packed Drinking Water</b></td>
